--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,10 @@ firebase-debug.*.log*
 
 # Firebase cache
 .firebase/
+firebase.json
+firestore.indexes.json
+firestore.rules
+.firebaserc
 
 # Firebase config
 
